# dbt-athena

./: .all-contributorsrc  .editorconfig  .env.example  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASING.md  dev-requirements.txt  dev.env  dev.env.example  dev_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature-request.yml  feature_request.md  feature_request.yml  other.md  other.yml  regression-report.yml
.github/workflows/: _code-quality.yml  _integration-tests.yml  _publish-internal.yml  _publish-pypi.yml  _unit-tests.yml  ci.yml  code-quality.yml  functional-tests-worfklow.yml  functional-tests-workflow.yml  functional-tests.yml  integration-tests.yml  issue-triage.yml  merge-checks.yml  publish-internal.yml  publish-pypi.yml  publish.yml  pull-request-checks.yml  python-publish.yml  release.yml  unit-tests.yml
dbt-athena/: .changie.yaml  .env.example  README.md  hatch.toml  pyproject.toml  test.env.example
dbt-athena-community/: hatch.toml  pyproject.toml
dbt-athena-community/src/dbt/: __init__.py
dbt-athena-community/src/dbt/adapters/athena_community/: __init__.py
dbt-athena/.changes/: 0.0.0.md
dbt-athena/.changes/unreleased/: Features-20241217-001238.yaml
dbt-athena/src/dbt/adapters/athena/: __init__.py  __version__.py  config.py  connections.py  impl.py  lakeformation.py  python_submissions.py  query_headers.py  relation.py  s3.py  session.py  utils.py
dbt-athena/src/dbt/include/athena/: dbt_project.yml
dbt-athena/src/dbt/include/athena/macros/adapters/: columns.sql  schema.sql
dbt-athena/src/dbt/include/athena/macros/materializations/models/helpers/: get_partition_batches.sql
dbt-athena/src/dbt/include/athena/macros/materializations/models/incremental/: column_helpers.sql  helpers.sql  incremental.sql  merge.sql
dbt-athena/src/dbt/include/athena/macros/materializations/models/table/: create_table_as.sql  table.sql
dbt-athena/src/dbt/include/athena/macros/materializations/models/view/: create_or_replace_view.sql  view.sql
dbt-athena/src/dbt/include/athena/macros/materializations/seeds/: helpers.sql
dbt-athena/src/dbt/include/athena/macros/utils/: array_append.sql  bool_or.sql  dateadd.sql  datediff.sql  ddl_dml_data_type.sql  hash.sql  listagg.sql  safe_cast.sql
dbt-athena/tests/: conftest.py
dbt-athena/tests/functional/: conftest.py
dbt-athena/tests/functional/adapter/: fixture_datediff.py  fixture_split_parts.py  test_basic_hive.py  test_basic_hive_native_drop.py  test_basic_iceberg.py  test_basic_iceberg_native_drop.py  test_change_relation_types.py  test_constraints.py  test_detailed_table_type.py  test_empty.py  test_force_batch.py  test_ha_iceberg.py  test_hive_iceberg.py  test_incremental_iceberg.py  test_incremental_iceberg_merge_no_updates.py  test_incremental_tmp_schema.py  test_on_schema_change.py  test_partitions.py  test_quote_seed_column.py  test_retries_iceberg.py  test_temporary_table_s3_path.py  test_unique_tmp_table_suffix.py  test_unit_testing.py
dbt-athena/tests/functional/adapter/utils/: parse_dbt_run_output.py  test_utils.py
dbt-athena/tests/unit/: conftest.py  constants.py  test_adapter.py  test_column.py  test_config.py  test_connection_manager.py  test_formatter.py  test_lakeformation.py  test_python_submissions.py  test_relation.py  test_session.py  test_utils.py  utils.py
dbt/adapters/athena/: __init__.py  __version__.py  column.py  config.py  connections.py  constants.py  exceptions.py  impl.py  lakeformation.py  python_submissions.py  query_headers.py  relation.py  s3.py  session.py  utils.py
dbt/include/athena/: __init__.py  dbt_project.yml  profile_template.yml  sample_profiles.yml
dbt/include/athena/macros/: adapters.sql  catalog.sql
dbt/include/athena/macros/adapters/: columns.sql  datatypes.sql  metadata.sql  persist_docs.sql  python_submissions.sql  relation.sql  schema.sql
dbt/include/athena/macros/dbt_utils/: get_tables_by_pattern_sql.sql
dbt/include/athena/macros/materializations/: hooks.sql  incremental.sql  seed.sql  snapshot.sql  table.sql  view.sql
dbt/include/athena/macros/materializations/models/: configs.sql  helpers.sql  helpers_iceberg.sql
dbt/include/athena/macros/materializations/models/helpers/: get_partition_batches.sql  process_bucket_column.sql
dbt/include/athena/macros/materializations/seeds/: helpers.sql
dbt/include/athena/macros/materializations/snapshots/: snapshot.sql
dbt/include/athena/macros/utils/: any_value.sql  array_concat.sql  array_construct.sql  datatypes.sql  date_trunc.sql  dateadd.sql  datediff.sql  ddl_data_type.sql  ddl_dml_data_type.sql  equal_rowcount.sql  right.sql  safe_cast.sql  timestamps.sql
test/integration/: athena.dbtspec
tests/: conftest.py  restrictive_role.md  restrictive_role_cf.yaml
tests/functional/adapter/: test_basic.py  test_basic_hive.py  test_basic_hive_native_drop.py  test_basic_iceberg.py  test_basic_iceberg_native_drop.py  test_change_relation_types.py  test_constraints.py  test_detailed_table_type.py  test_docs.py  test_force_batch_insert.py  test_ha_iceberg.py  test_hive_iceberg.py  test_hive_on_schema_change.py  test_incremental_iceberg.py  test_incremental_tmp_schema.py  test_on_schema_change.py  test_partitions.py  test_post_hooks.py  test_python_submissions.py  test_retries_iceberg.py  test_seed_by_insert.py  test_snapshot.py  test_table_temp_schema_name.py  test_unique_tmp_table_suffix.py
tests/functional/adapter/utils/: parse_dbt_run_output.py  test_utils.py
tests/functional/seeds/: fixtures.py  test_seed_insert.py  test_seed_upload.py
tests/unit/: conftest.py  constants.py  fixtures.py  test_adapter.py  test_column.py  test_config.py  test_connection_manager.py  test_formatter.py  test_lakeformation.py  test_python_submissions.py  test_query_headers.py  test_relation.py  test_session.py  test_utils.py  utils.py
(+13 files in other folders)
