[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dbt-athena"
description = "The athena adapter plugin for dbt (data build tool)"
readme = "README.md"
keywords = ["dbt", "adapter", "adapters", "database", "elt", "dbt-core", "dbt Core", "dbt Cloud", "dbt Labs", "athena"]
requires-python = ">=3.9.0"
authors = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
maintainers = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies=[
    "dbt-adapters>=1.0.0,<2.0",
    "dbt-common>=1.0.0,<2.0",
    # add dbt-core to ensure backwards compatibility of installation, this is not a functional dependency
    "dbt-core>=1.8.0",
    "boto3>=1.28",
    "boto3-stubs[athena,glue,lakeformation,sts]>=1.28",
    "mmh3>=4.0.1,<4.2.0",
    "pyathena>=2.25,<4.0",
    "pydantic>=1.10,<3.0",
    "tenacity>=8.2,<10.0",
]
[project.urls]
Homepage = "https://github.com/dbt-labs/dbt-athena/dbt-athena"
Documentation = "https://docs.getdbt.com"
Repository = "https://github.com/dbt-labs/dbt-athena.git#subdirectory=dbt-athena"
Issues = "https://github.com/dbt-labs/dbt-athena/issues"
Changelog = "https://github.com/dbt-labs/dbt-athena/blob/main/dbt-athena/CHANGELOG.md"

[tool.pytest]
testpaths = ["tests/unit", "tests/functional"]
color = true
csv = "results.csv"
filterwarnings = [
    "ignore:.*'soft_unicode' has been renamed to 'soft_str'*:DeprecationWarning",
    "ignore:unclosed file .*:ResourceWarning",
]
